Update 'j9x0miilc-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:65d15b3faea979e9663530a668feee685f6cfa69@sha256:011dd1136d9b6ef3c7779dabf055580b9b74bdbf790310768d6e9b46014d35d9

--- a/components/j9x0miilc-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/j9x0miilc-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j9x0miilc-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:65d15b3faea979e9663530a668feee685f6cfa69@sha256:011dd1136d9b6ef3c7779dabf055580b9b74bdbf790310768d6e9b46014d35d9
+          name: container-image
